add validation checks to the logic that adds students to their institutions